# Company_AAP_demo1

./: .gitignore  README.en.md  README.md  README.zh-TW.md  main.py  pyproject.toml
adb/: adb.7z
config/: ignore_config.py  settings.py
core/: android_automation.py  excel_monitor.py  file_handler.py  task_scheduler.py  task_status.py  task_validator.py
tools/: ignore_manager.py
uploads/deviceA/2025-03-25_19-31/: content.txt
uploads/deviceA/2025-06-18_16-40/: content.txt
utils/: adb_utils.py  content_reader.py  excel_backup.py  excel_utils.py  log_config.py  logger.py
