[project]
name = "project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "xlj-hly",email = "3532818356@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "uiautomator2 (>=3.2.9,<4.0.0)",
    "pywin32 (>=310,<311)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false